// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar Range renders correctly 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="css-113xs51-boxStyles-CalendarRangeContainer"
    >
      <div
        class="rdp "
      >
        <div
          class="rdp-months"
        >
          <div
            class="rdp-month rdp-caption_start rdp-caption_end"
          >
            <div
              class="rdp-caption"
            >
              <h2
                aria-atomic="true"
                aria-live="polite"
                class="css-3ucdhc-CaptionLabel"
                id="react-day-picker-4"
              >
                June 2024
              </h2>
              <div
                class="css-v0gr9g-boxStyles"
              >
                <div
                  class="css-8a7wrr-YearMonthSelect"
                >
                  <label
                    class="css-g8kyc5-YearMonthSelect"
                    for="calendar-:r4:-select"
                  >
                    Month
                  </label>
                  <select
                    class="css-x8yzpz-boxStyles-YearMonthSelect"
                    id="calendar-:r4:-select"
                  >
                    <option
                      value="0"
                    >
                      January
                    </option>
                    <option
                      value="1"
                    >
                      February
                    </option>
                    <option
                      value="2"
                    >
                      March
                    </option>
                    <option
                      value="3"
                    >
                      April
                    </option>
                    <option
                      value="4"
                    >
                      May
                    </option>
                    <option
                      value="5"
                    >
                      June
                    </option>
                    <option
                      value="6"
                    >
                      July
                    </option>
                    <option
                      value="7"
                    >
                      August
                    </option>
                    <option
                      value="8"
                    >
                      September
                    </option>
                    <option
                      value="9"
                    >
                      October
                    </option>
                    <option
                      value="10"
                    >
                      November
                    </option>
                    <option
                      value="11"
                    >
                      December
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="css-j57zs3-YearMonthSelect"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="6 9 12 15 18 9"
                    />
                  </svg>
                </div>
                <div
                  class="css-8a7wrr-YearMonthSelect"
                >
                  <label
                    class="css-g8kyc5-YearMonthSelect"
                    for="calendar-:r5:-select"
                  >
                    Year
                  </label>
                  <select
                    class="css-x8yzpz-boxStyles-YearMonthSelect"
                    id="calendar-:r5:-select"
                  >
                    <option
                      value="2014"
                    >
                      2014
                    </option>
                    <option
                      value="2015"
                    >
                      2015
                    </option>
                    <option
                      value="2016"
                    >
                      2016
                    </option>
                    <option
                      value="2017"
                    >
                      2017
                    </option>
                    <option
                      value="2018"
                    >
                      2018
                    </option>
                    <option
                      value="2019"
                    >
                      2019
                    </option>
                    <option
                      value="2020"
                    >
                      2020
                    </option>
                    <option
                      value="2021"
                    >
                      2021
                    </option>
                    <option
                      value="2022"
                    >
                      2022
                    </option>
                    <option
                      value="2023"
                    >
                      2023
                    </option>
                    <option
                      value="2024"
                    >
                      2024
                    </option>
                    <option
                      value="2025"
                    >
                      2025
                    </option>
                    <option
                      value="2026"
                    >
                      2026
                    </option>
                    <option
                      value="2027"
                    >
                      2027
                    </option>
                    <option
                      value="2028"
                    >
                      2028
                    </option>
                    <option
                      value="2029"
                    >
                      2029
                    </option>
                    <option
                      value="2030"
                    >
                      2030
                    </option>
                    <option
                      value="2031"
                    >
                      2031
                    </option>
                    <option
                      value="2032"
                    >
                      2032
                    </option>
                    <option
                      value="2033"
                    >
                      2033
                    </option>
                    <option
                      value="2034"
                    >
                      2034
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="css-j57zs3-YearMonthSelect"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="6 9 12 15 18 9"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="rdp-nav"
              >
                <button
                  aria-label="Go to previous month"
                  class="rdp-button_reset rdp-button rdp-nav_button rdp-nav_button_previous"
                  name="previous-month"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="css-1g6fn8w-Icon"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="15 18 9 12 15 6"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Go to next month"
                  class="rdp-button_reset rdp-button rdp-nav_button rdp-nav_button_next"
                  name="next-month"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="css-1g6fn8w-Icon"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="9 18 15 12 9 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <table
              aria-labelledby="react-day-picker-4"
              class="rdp-table"
              role="grid"
            >
              <thead
                class="rdp-head"
              >
                <tr
                  class="rdp-head_row"
                >
                  <th
                    aria-label="Sunday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    Su
                  </th>
                  <th
                    aria-label="Monday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    Mo
                  </th>
                  <th
                    aria-label="Tuesday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    Tu
                  </th>
                  <th
                    aria-label="Wednesday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    We
                  </th>
                  <th
                    aria-label="Thursday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    Th
                  </th>
                  <th
                    aria-label="Friday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    Fr
                  </th>
                  <th
                    aria-label="Saturday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    Sa
                  </th>
                </tr>
              </thead>
              <tbody
                class="rdp-tbody"
              >
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    aria-selected="true"
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="Selected. 1st June 2024 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_start"
                      name="day"
                      tabindex="0"
                      type="button"
                    >
                      1
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="2nd June 2024 (Sunday). Between selected dates"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_middle"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      2
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="3rd June 2024 (Monday). Between selected dates"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_today rdp-day_range_middle"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      3
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="4th June 2024 (Tuesday). Between selected dates"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_middle"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      4
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="5th June 2024 (Wednesday). Between selected dates"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_middle"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      5
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="6th June 2024 (Thursday). Between selected dates"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_middle"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      6
                    </button>
                  </td>
                  <td
                    aria-selected="true"
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="Selected. 7th June 2024 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected rdp-day_range_end"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      7
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="8th June 2024 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      8
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="9th June 2024 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      9
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="10th June 2024 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      10
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="11th June 2024 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      11
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="12th June 2024 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      12
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="13th June 2024 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      13
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="14th June 2024 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      14
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="15th June 2024 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      15
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="16th June 2024 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      16
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="17th June 2024 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      17
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="18th June 2024 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      18
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="19th June 2024 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      19
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="20th June 2024 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      20
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="21st June 2024 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      21
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="22nd June 2024 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      22
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="23rd June 2024 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      23
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="24th June 2024 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      24
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="25th June 2024 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      25
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="26th June 2024 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      26
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="27th June 2024 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      27
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="28th June 2024 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      28
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="29th June 2024 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      29
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="30th June 2024 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      30
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`Calendar Single renders correctly 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      class="css-1qnfusx-boxStyles-CalendarContainer"
    >
      <div
        class="rdp "
      >
        <div
          class="rdp-months"
        >
          <div
            class="rdp-month rdp-caption_start rdp-caption_end"
          >
            <div
              class="rdp-caption"
            >
              <h2
                aria-atomic="true"
                aria-live="polite"
                class="css-3ucdhc-CaptionLabel"
                id="react-day-picker-1"
              >
                June 2024
              </h2>
              <div
                class="css-v0gr9g-boxStyles"
              >
                <div
                  class="css-8a7wrr-YearMonthSelect"
                >
                  <label
                    class="css-g8kyc5-YearMonthSelect"
                    for="calendar-:r0:-select"
                  >
                    Month
                  </label>
                  <select
                    class="css-x8yzpz-boxStyles-YearMonthSelect"
                    id="calendar-:r0:-select"
                  >
                    <option
                      value="0"
                    >
                      January
                    </option>
                    <option
                      value="1"
                    >
                      February
                    </option>
                    <option
                      value="2"
                    >
                      March
                    </option>
                    <option
                      value="3"
                    >
                      April
                    </option>
                    <option
                      value="4"
                    >
                      May
                    </option>
                    <option
                      value="5"
                    >
                      June
                    </option>
                    <option
                      value="6"
                    >
                      July
                    </option>
                    <option
                      value="7"
                    >
                      August
                    </option>
                    <option
                      value="8"
                    >
                      September
                    </option>
                    <option
                      value="9"
                    >
                      October
                    </option>
                    <option
                      value="10"
                    >
                      November
                    </option>
                    <option
                      value="11"
                    >
                      December
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="css-j57zs3-YearMonthSelect"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="6 9 12 15 18 9"
                    />
                  </svg>
                </div>
                <div
                  class="css-8a7wrr-YearMonthSelect"
                >
                  <label
                    class="css-g8kyc5-YearMonthSelect"
                    for="calendar-:r1:-select"
                  >
                    Year
                  </label>
                  <select
                    class="css-x8yzpz-boxStyles-YearMonthSelect"
                    id="calendar-:r1:-select"
                  >
                    <option
                      value="2014"
                    >
                      2014
                    </option>
                    <option
                      value="2015"
                    >
                      2015
                    </option>
                    <option
                      value="2016"
                    >
                      2016
                    </option>
                    <option
                      value="2017"
                    >
                      2017
                    </option>
                    <option
                      value="2018"
                    >
                      2018
                    </option>
                    <option
                      value="2019"
                    >
                      2019
                    </option>
                    <option
                      value="2020"
                    >
                      2020
                    </option>
                    <option
                      value="2021"
                    >
                      2021
                    </option>
                    <option
                      value="2022"
                    >
                      2022
                    </option>
                    <option
                      value="2023"
                    >
                      2023
                    </option>
                    <option
                      value="2024"
                    >
                      2024
                    </option>
                    <option
                      value="2025"
                    >
                      2025
                    </option>
                    <option
                      value="2026"
                    >
                      2026
                    </option>
                    <option
                      value="2027"
                    >
                      2027
                    </option>
                    <option
                      value="2028"
                    >
                      2028
                    </option>
                    <option
                      value="2029"
                    >
                      2029
                    </option>
                    <option
                      value="2030"
                    >
                      2030
                    </option>
                    <option
                      value="2031"
                    >
                      2031
                    </option>
                    <option
                      value="2032"
                    >
                      2032
                    </option>
                    <option
                      value="2033"
                    >
                      2033
                    </option>
                    <option
                      value="2034"
                    >
                      2034
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="css-j57zs3-YearMonthSelect"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="6 9 12 15 18 9"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="rdp-nav"
              >
                <button
                  aria-label="Go to previous month"
                  class="rdp-button_reset rdp-button rdp-nav_button rdp-nav_button_previous"
                  name="previous-month"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="css-1g6fn8w-Icon"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="15 18 9 12 15 6"
                    />
                  </svg>
                </button>
                <button
                  aria-label="Go to next month"
                  class="rdp-button_reset rdp-button rdp-nav_button rdp-nav_button_next"
                  name="next-month"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="css-1g6fn8w-Icon"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <polyline
                      points="9 18 15 12 9 6"
                    />
                  </svg>
                </button>
              </div>
            </div>
            <table
              aria-labelledby="react-day-picker-1"
              class="rdp-table"
              role="grid"
            >
              <thead
                class="rdp-head"
              >
                <tr
                  class="rdp-head_row"
                >
                  <th
                    aria-label="Sunday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    Su
                  </th>
                  <th
                    aria-label="Monday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    Mo
                  </th>
                  <th
                    aria-label="Tuesday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    Tu
                  </th>
                  <th
                    aria-label="Wednesday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    We
                  </th>
                  <th
                    aria-label="Thursday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    Th
                  </th>
                  <th
                    aria-label="Friday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    Fr
                  </th>
                  <th
                    aria-label="Saturday"
                    class="rdp-head_cell"
                    scope="col"
                  >
                    Sa
                  </th>
                </tr>
              </thead>
              <tbody
                class="rdp-tbody"
              >
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    aria-selected="true"
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="Selected. 1st June 2024 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_selected"
                      name="day"
                      tabindex="0"
                      type="button"
                    >
                      1
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="2nd June 2024 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      2
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="3rd June 2024 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day rdp-day_today"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      3
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="4th June 2024 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      4
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="5th June 2024 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      5
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="6th June 2024 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      6
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="7th June 2024 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      7
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="8th June 2024 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      8
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="9th June 2024 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      9
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="10th June 2024 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      10
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="11th June 2024 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      11
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="12th June 2024 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      12
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="13th June 2024 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      13
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="14th June 2024 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      14
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="15th June 2024 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      15
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="16th June 2024 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      16
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="17th June 2024 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      17
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="18th June 2024 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      18
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="19th June 2024 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      19
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="20th June 2024 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      20
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="21st June 2024 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      21
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="22nd June 2024 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      22
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="23rd June 2024 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      23
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="24th June 2024 (Monday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      24
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="25th June 2024 (Tuesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      25
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="26th June 2024 (Wednesday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      26
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="27th June 2024 (Thursday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      27
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="28th June 2024 (Friday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      28
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="29th June 2024 (Saturday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      29
                    </button>
                  </td>
                </tr>
                <tr
                  class="rdp-row"
                >
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <button
                      aria-label="30th June 2024 (Sunday)"
                      class="rdp-button_reset rdp-button rdp-day"
                      name="day"
                      tabindex="-1"
                      type="button"
                    >
                      30
                    </button>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                  <td
                    class="rdp-cell"
                    role="gridcell"
                  >
                    <span
                      class="css-avudkd-VisuallyHidden"
                    >
                      Blank
                    </span>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
